--- a/requirements.txt
+++ b/requirements.txt
@@ -25,10 +25,12 @@ fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-adk==0.5.0
+google-ai-generativelanguage==0.6.15
 google-api-core==2.25.0rc1
 google-api-python-client==2.169.0
 google-auth==2.40.1
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
 google-cloud-aiplatform==1.93.0
 google-cloud-bigquery==3.32.0
 google-cloud-core==2.4.3
@@ -39,6 +41,7 @@ google-cloud-storage==2.19.0
 google-cloud-trace==1.16.1
 google-crc32c==1.7.1
 google-genai==1.15.0
+google-generativeai==0.8.5
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 graphviz==0.20.3
@@ -46,6 +49,8 @@ greenlet==3.2.2
 grpc-google-iam-v1==0.14.2
 grpcio==1.71.0
 grpcio-status==1.71.0
+gspread==6.2.1
+gspread-dataframe==4.0.0
 h11==0.16.0
 h5py==3.13.0
 httpcore==1.0.9
@@ -68,6 +73,7 @@ matplotlib-inline==0.1.7
 mcp==1.9.0
 narwhals==1.40.0
 numpy==2.2.5
+oauthlib==3.2.2
 opentelemetry-api==1.33.1
 opentelemetry-exporter-gcp-trace==1.9.0
 opentelemetry-resourcedetector-gcp==1.9.0a0
@@ -99,6 +105,7 @@ PyWavelets==1.8.0
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
+requests-oauthlib==2.0.0
 rpds-py==0.25.0
 rsa==4.9.1
 scipy==1.15.2
@@ -114,6 +121,7 @@ streamlit==1.45.1
 tenacity==9.1.2
 toml==0.10.2
 tornado==6.5
+tqdm==4.67.1
 traitlets==5.14.3
 typing-inspection==0.4.0
 typing_extensions==4.13.2
